--- a/TheWebDeveloperBoot2023/test/00.html
+++ b/TheWebDeveloperBoot2023/test/00.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--이 문서가 html5구문 또는 html5 버전을 쓴다고 알려줌-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,20 +6,43 @@
     <title>About Page</title>
 </head>
 <body>
+    <nav>
+        <ul>
+        <li><a href="table.html">Table</a></li>
+        <li><a href="forms.html">Forms</a></li>
+        <li><a href="lolo">LOLO</a></li>
+        </ul>
+    </nav>
+    <main>
+    <h1>1 &lt; 6 &gt; 5 &amp; &spades;</h1>
     <h1>this is the live server</h1>
     <p>I want to make a page about my photofolio so i have to write dowm some sentence in here. but... you know, i am empty now...</p>
     <h2>HELLO DEAR</h2>
+    <hr>
+    <p>선을 가로지르는 요소 입니다.</p>
+    <p>
+        줄바꿈<sup>[1]</sup><br>
+        태그를 이용하여<sup><a href="soom.sourcedot.com">[2]</a></sup><br>
+        이런식으로<br>
+        시도해 볼 수 있습니다.
+    </p>
+    <h2>화학 방정식도 작성해 봅시다 H<sub>2</sub>O</h2>
+    <p>1/<sub>2</sub> + 1/<sub>2</sub> = 1</p>
+    <div>
     <a href="http://www.naver.com">This is NAVER LINK</a>
     <a href="/TheWebDeveloperBoot2023/test/01.html">This is 01.html LINK</a>
+    </div>
     <h3>HI THERE</h3>
     <!--여기서는 html에서 바로 사진 크기를 조정했지만 css가 훨씬 나음-->
     <img src="image/day.jpg" alt="학교 낮사진을 찍었습니다" width="300px" height="400px">
     <img src="image/night.jpg"alt="학교 밤사진을 찍었습니다" width="300px" height="400px">
     <img src="image/cowDoll.jpg" alt="우왕이 인형을 찍었습니다" width="300px" height="400px">
+    <section>
     <P>Never theorize before you have data. Invariably, you end up twisting facts to suit theories,
         instead of <a href="https://www.google.com">theories</a> to suit facts. Never theorize before you have data. Invariably, you end up twisting facts to suit theories,
         instead of theories to suit facts. Never theorize before you have data. Invariably, you end up twisting facts to suit theories,
         instead of theories to suit facts.  </P>
+    </section>
     <h3>MEATS</h3>
     <ul>
         <li>chicken</li>
@@ -49,5 +72,6 @@
         <li>four</li>
         <li>five</li>
     </ol>
+</main>
 </body>
 </html>
