--- a/TheWebDeveloperBoot2023/test/forms.html
+++ b/TheWebDeveloperBoot2023/test/forms.html
@@ -4,10 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms Demo</title>
+
 </head>
 <body>
     <h1>Forms Demo</h1>
+    <form action="/tacos">
+        <!--button의 defalut값은 submit-->
+        <P>
+        <label for="username">Enter a Username</label>
+        <input id="username" type="text" placeholder="username" name="usernmae">
+        </P>
+        <p>
+        <label for="password">Enter a Password</label>
+        <input id="password" type="password" placeholder="password" name="password">
+        </p>
+        <p>
+        <label for="color">Enter a color</label>
+        <input id="color" type="color">
+        </p>
+        <p>
+        <label for = "number">Enter a numbr</label>
+        <input id = "number" type="number" placeholder="number" min="10" max="200">
+        </p>
+        <button type="button">Regular button (won't submit)</button>
+        <button>submit</button>
+        <button>Click Me!</button>
 
-    <from action=""></from>
+    </form>
+    <hr>
+    <button>outsideForm</button>
+    <h2>Hijacking Search</h2>
+    <h3>Search Reddit</h3>
+    <form action="https://www.reddit.com/search">
+        <input type="text"name="q">
+        <button>Search Reddit</button>
+    </form>
+    <h3>Search Google</h3>
+    <form action="https://www.google.com/search">
+        <input type="text" name="q">
+        <button>Search Google</button>
+    </form>
+    <h3>Search Youtube</h3>
+    <form action="https://www.youtube.com/results">
+        <input type="type" name="search_query">
+        <button>Search Youtube</button>
+    </form>
+
+    <h2>More Inputs!</h2>
+    <form action="/birds">
+        <input type="checkbox" name="agree" id="agree">
+        <label for="agree">I agree to everything</label>
+        <input type="checkbox" name="checked" id="checked" checked>
+        <label for="checked">I already checked!</label>
+        <p>
+            <!--value는 실제로 이용자의 눈에 보이지 않지만 제출시 값이 전송된다-->
+            <label for="xs">XS:</label>
+            <input type="radio" name="size" id="xs" value="xs">
+            <label for="s">S:</label>
+            <input type="radio" name="size" id="s" value="S">
+            <label for="m">M:</label>
+            <input type="radio" name="size" id="m" value="m">
+        </p>
+        <p>
+            <label for="meal">Please Select an Entree</label>
+            <select name="meal" id="meal">
+                <option value="fish">Fish</option>
+                <option value="veg" selected>Vegeterian</option>
+                <option value="steak">Steak</option>
+            </select>
+        </p>
+        <p>
+            <label for="cheese">Amoount of Cheese:</label>
+            <input type="range" id="cheese" min="1" max="10" value="3" name="cheese_level">
+        </p>
+        <p>
+            <label for="requests">Any Special Requests?</label><br>
+            <textarea id="reuests" rows="5" cols="40" name="Reuqests?" placeholder="Type something here"></textarea>
+        </p>
+        <button>Submit</button>
+    </form>
+    <h2>Validations Demo</h2>
+    <form action="/dummy">
+        <label for="first">Enter First Name</label>
+        <input type="text" name="first" id="first" required>
+        <p>
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" minlength="5" maxlength="20" required>
+        <!--^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$-->
+        </p>
+        <p>
+            <input type="email" required>
+            <input type="url" required>
+        </p>
+        <button>Submit</button>
+    </form>
 </body>
 </html>
